openwhisk/couchdb-external/couchdb-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    meta.helm.sh/release-name: couchdb-external
    meta.helm.sh/release-namespace: couchdb-external
  creationTimestamp: "2023-03-15T08:25:39Z"
  generation: 1
  labels:
    app: couchdb
    app.kubernetes.io/managed-by: Helm
    chart: couchdb-4.1.0
    heritage: Helm
    release: couchdb-external
  name: couchdb-external-couchdb
  namespace: couchdb-external
  resourceVersion: "6392493"
  uid: 59276311-3a91-463f-b283-d097674def4a
spec:
  podManagementPolicy: Parallel
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: couchdb
      release: couchdb-external
  serviceName: couchdb-external-couchdb
  template:
    metadata:
      annotations:
        checksum/config: 9bd42f745f37f0c8989f924a3999f1e2ca45afba630867ecc3516a534f8dd5b7
        checksum/secret: ff31773ae75775e660f88afa58692f10d33952651aac1ef76d41bc1038c00b1c
      creationTimestamp: null
      labels:
        app: couchdb
        release: couchdb-external
    spec:
      containers:
      - env:
        - name: COUCHDB_ERLANG_COOKIE
          valueFrom:
            secretKeyRef:
              key: erlangCookie
              name: couchdb-external-couchdb
        - name: ERL_FLAGS
          value: ' -name couchdb '
        - name: COUCHDB_USER
          value: 'admin'
        - name: COUCHDB_PASSWORD
          value: 'password'
        image: couchdb:3.2.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /_up
            port: 5984
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: couchdb
        ports:
        - containerPort: 5984
          name: couchdb
          protocol: TCP
        - containerPort: 4369
          name: epmd
          protocol: TCP
        - containerPort: 9100
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /_up
            port: 5984
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/couchdb/etc/default.d
          name: config-storage
        - mountPath: /opt/couchdb/data
          name: database-storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: couchdb-external-couchdb
      serviceAccountName: couchdb-external-couchdb
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: config-storage
      - configMap:
          defaultMode: 420
          items:
          - key: inifile
            path: chart.ini
          - key: seedlistinifile
            path: seedlist.ini
          name: couchdb-external-couchdb
        name: config
      - emptyDir: {}
        name: database-storage
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
status:
  availableReplicas: 0
  collisionCount: 0
  currentReplicas: 3
  currentRevision: couchdb-external-couchdb-6df5cbd478
  observedGeneration: 1
  replicas: 3
  updateRevision: couchdb-external-couchdb-6df5cbd478
  updatedReplicas: 3
