openwhisk/couchdb-external/ingress-couchdb-salaolimpo.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: couchdb
  labels:
    app: couchdb
spec:
  routes:
  - kind: Rule
    match: Host(`couchdb-gateway-salaolimpo.salaolimpo.cloud`)
    services:
    - kind: Service
      name: couchdb-external-couchdb
      namespace: couchdb-external
      port: 5984
